--- a/index.html
+++ b/index.html
@@ -24,6 +24,42 @@
           <li><a href="index.html#content">CONTACT</a></li>
         </ul>
       </nav>
+
+      <!--スマホ用メニューボタン-->
+      <button id="menu-sp" onclick="document.getElementById('nav-sp').style.display = 'block'">
+        <img  src="images/button-menu.png" alt="ナビゲーションを開く">
+      </button>
+       
+      <div id="nav-sp">
+        <button id="close" onclick="document.getElementById('nav-sp').style.display = 'none'">
+          <img src="images/button-close.png" alt="ナビゲーションを閉じる">
+        </button>
+
+       <nav>
+         <ul>
+           <li>
+             <a id="logo-sp" href="index.html" onclick="document.getElementById('nav-sp').style.display = 'none'"><img src="images/logo-sp.png" alt="トップページに戻る"></a>
+           </li>
+           <li><a class="menu" href="mission.html" onclick="document.getElementById('nav-sp').style.display = 'none'">MISSION</a></li>
+           <li><a class="menu" href="product.html" onclick="document.getElementById('nav-sp').style.display = 'none'">PRODUCT</a></li>
+           <li><a class="menu" href="index.html#aboutus" onclick="document.getElementById('nav-sp').style.display = 'none'">ABOUT US</a></li>
+           <li><a class="menu" href="index.html#vision" onclick="document.getElementById('nav-sp').style.display = 'none'">VISION</a></li>
+           <li><a class="menu" href="index.html#company" onclick="document.getElementById('nav-sp').style.display = 'none'">COMPANY</a></li>
+           <li><a class="menu" href="index.html#contact" onclick="document.getElementById('nav-sp').style.display = 'none'">CONTACT</a></li>
+         </ul>
+       </nav>
+       <div id="sns">
+         <a href="https://www.facebook.com/sejuku2013">
+           <img src="images/button-facebook.png" alt="Facebookのリンク">
+         </a>
+         <a href="https://twitter.com/samuraijuku">
+           <img src="images/button-twitter.png" alt="Twitterのリンク">
+         </a>
+         <a href="https://www.youtube.com/channel/UCCFOQO5aDK0xXam4cUQXT8g">
+           <img src="images/button-youtube.png" alt="YouTubeのリンク">
+         </a>
+       </div>
+     </div>
     </header>
 
 
@@ -143,7 +179,7 @@
         </section>
 
 
-        <section is="vision">
+        <section id="vision">
           <h2 class="index-h2">VISION</h2>
           <h3>7つの行動指針</h3>
           <div>
@@ -231,7 +267,7 @@
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.060393772694!2d139.7747129!3d35.7001314!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ea7ba1a054d%3A0x81605e8b12064e47!2z44CSMTAxLTAwMjIg5p2x5Lqs6YO95Y2D5Luj55Sw5Yy656We55Sw57e05aGA55S6MzAw55Wq5Zyw!5e0!3m2!1sja!2sjp!4v1729585528003!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
           style="border: 0" allowfullscreen="" loading="lazy">
-        </iframe>"       
+        </iframe>   
          </section>
 
         <section id="contact">
